# SDL_Renderer-Boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  compile_flags.txt  run.sh  tags
include/: SDL_Constants.hpp  SDL_Functions.hpp
src/: CMakeLists.txt  SDL_Functions.cpp  main.cpp
